Updated readme, index, and myscripts.  Now playable in browser.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="myscripts.js"></script>
+    <script src="myscripts.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Rock, Paper, Scissors!</h1>
+    <div class="buttons">
+        <button id="ROCK">Rock</button>
+        <button id="PAPER">Paper</button>
+        <button id="SCISSORS">Scissors</button>
+        <p></p>
+    </div><div class="end">
+    <div id="CURRENTROUND"></div>
+    <br>
+    <div >Current score: </div>
+    <br>
+    <div id="SCORE">You: 0 </div>
+    <div id="SCORE2">Computer: 0</div>
+    <br>
+    <div id="FINAL"></div>
+    <br>
+    <button id="RESET">Reset!</button></div>
 </body>
 </html>
